# teaching-benchmark

./: .gitignore  ORGINALITY.md  PLAN.md  PLAN_ASSESSMENT.md  REWARD_HACKING.md  SETUP.md  SPEC.md  VERIFIER.md  copilot-session-9c55d844-b77f-48cd-a93f-138f4a1960b6.md  main.ipynb  pyproject.toml
environments/my_env/: README.md  pyproject.toml
environments/teaching_env/: README.md  parsing.py  pyproject.toml  teaching_env.py
environments/teaching_env/.prime/: .env-metadata.json
environments/teaching_env/outputs/evals/teaching-env--openai--gpt-4.1-mini/55cc2c66/: metadata.json  results.jsonl
environments/teaching_env/outputs/evals/teaching_env--openai--gpt-4.1-mini/54918e16/: metadata.json  results.jsonl
environments/teaching_env/outputs/evals/teaching_env--openai--gpt-4.1-mini/7e964c4a/: metadata.json  results.jsonl
environments/teaching_env/verifier/: __init__.py  base.py  concept_coverage.py  contradiction_detection.py  entailment_chain.py  example_grounding.py  nli_model.py  sentence_coverage.py  teaching_verifier.py
