[project]
name = "teaching-env"
description = "Multi-turn environment that evaluates how well a model teaches a STEM subject to a simulated student."
tags = ["multi-turn", "teaching", "judge", "stem", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "datasets",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["teaching_env.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 3
