[project]
name = "teaching-env"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.12",
    "numpy<2.0",
    "sentence-transformers",
    "scikit-learn",
    "spacy",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "nltk",
    "textstat",
    "datasets",
    "keybert",
    "networkx",
    "markitdown[pdf]",
    "python-frontmatter",
    "markdown-it-py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["teaching_env.py", "parsing.py", "verifier/", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.hatch.metadata]
allow-direct-references = true
